# rules_system_deps

./: .gitignore  MODULE.bazel  README.md  WORKSPACE
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
examples/basic/: BUILD.bazel  MODULE.bazel  main.c
examples/go_gtk4/: BUILD.bazel  MODULE.bazel  README.md  go.mod  main.go
examples/go_webp/: BUILD.bazel  MODULE.bazel  README.md  go.mod  main.go
extensions/: BUILD.bazel  extensions.bzl
private/: BUILD.bazel  go_pkg_config_repo.bzl  pkg_config_repo.bzl  system_library.bzl
