bazel_dep(name = "rules_system_deps", version = "0.0.1")
local_path_override(
    module_name = "rules_system_deps",
    path = "../..",
)

bazel_dep(name = "rules_cc", version = "0.2.14")

sys_libs = use_extension("@rules_system_deps//extensions:extensions.bzl", "pkg_config_ext")

sys_libs.lib(
    name = "pci",
    pkg = "libpci",
)

use_repo(sys_libs, "pci")
