load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "main",
    srcs = ["main.go"],
    cgo = True,
    visibility = ["//visibility:public"],
    deps = ["@com_github_diamondburned_gotk4_pkg//gtk/v4:go_default_library"],
)

gazelle(name = "gazelle")
