# This module is the root Bazel module for the example project.
module(name = "go_gtk4_example")

# Depend on the local bazel_pkg_config module.
bazel_dep(name = "bazel_pkg_config", version = "0.0.1")
# During local development, use the checkout two directories up instead of a registry release.
local_path_override(
    module_name = "bazel_pkg_config",
    path = "../..",
)

# Core rule sets used by this example.
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.46.0")

# Load bazel_pkg_config's module extension that creates repos from pkg-config packages.
sys_libs = use_extension("@bazel_pkg_config//extensions:extensions.bzl", "pkg_config_ext")
# Create repo @glib from host pkg-config package glib-2.0.
sys_libs.lib(name = "glib", pkg = "glib-2.0")
# Create repo @gtk4 from host pkg-config package gtk4.
sys_libs.lib(name = "gtk4", pkg = "gtk4")
# Define a Go cgo profile named "gtk4" that injects glib and gtk4 C deps.
sys_libs.go_profile(name = "gtk4", libs = ["@glib//:glib", "@gtk4//:gtk4"])
# Make generated repos visible to this root module.
use_repo(sys_libs, "glib", "gtk4", "pkg_config_go")

# Register a Go SDK toolchain.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

# Load Gazelle's go_deps extension and import module deps from go.mod.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
# Expose @pkg_config_go inside repos generated by go_deps (for gazelle_override loads).
inject_repo(go_deps, "pkg_config_go")
# Override Gazelle behavior for gotk4/pkg while generating BUILD files.
go_deps.gazelle_override(
    path = "github.com/diamondburned/gotk4/pkg",
    directives = [
        # map_kind tells Gazelle: whenever it would emit go_library, emit
        # go_library_gtk4 from @pkg_config_go//:defs.bzl instead.
        # This is needed so generated cgo rules get gtk4/glib cdeps automatically.
        "gazelle:map_kind go_library go_library_gtk4 @pkg_config_go//:defs.bzl",
    ],
)
# Make the generated gotk4 repo available for BUILD deps.
use_repo(go_deps, "com_github_diamondburned_gotk4_pkg")
