module(name = "go_webp_example")

bazel_dep(name = "rules_system_deps", version = "0.0.1")
local_path_override(
    module_name = "rules_system_deps",
    path = "../..",
)

bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.46.0")
bazel_dep(name = "libwebp", version = "1.6.0")

sys_libs = use_extension("@rules_system_deps//extensions:extensions.bzl", "pkg_config_ext")
inject_repo(sys_libs, "go_webp_example")
sys_libs.go_profile(name = "webp", libs = ["@go_webp_example//:webp"])
use_repo(sys_libs, "pkg_config_go")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
inject_repo(go_deps, "pkg_config_go")
go_deps.gazelle_override(
    path = "github.com/kolesa-team/go-webp",
    directives = [
        "gazelle:map_kind go_library go_library_webp @pkg_config_go//:defs.bzl",
    ],
)
use_repo(go_deps, "com_github_kolesa_team_go_webp")
